test/warnings/bad/write_to_r0.ulm
.text
main:
    ; r0 is a read-only register
    loadi r0 1